fix(mall): 修复商品首图设置逻辑- 将商品首图设置从 get(0) 更改为 getFirst() 方法
- 避免空列表访问异常- 提高代码可读性和健壮性